--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="panel panel-primary" style="margin: 15px;">
     <div class="panel-heading">
-        <h3 class="panel-title">Ngixc | Shotener</h3>
+        <h3 class="panel-title">Ngixc | Shotener
+<button class="btn btn-information" onclick="window.location.reload();"><i class="fa fa-refresh"></i> Refresh</button></h3>
     </div>
 <style>
       .tombol{
@@ -35,43 +36,17 @@
       }
     </style>
     </head>
-    <body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"><div class="App"><div class="App-container"><div class="App-inner"><div class="App-inner-block"><h1>ngixc-team Shotener</h1><hr>
-    <b>Shotener is.gd</b><form method="post" name="mainform" id="mainform" action="https://is.gd/create.php?format=simple&amp;url=create.php" onsubmit="return submitForm()">
-<div id="errortext"></div>
-<div id="urlboxcontainer">
-<input type="text" class="urlbox" maxlength="500" size="35" name="url" value=""></div>
-<div id="shorturlboxcontainer" style="display: none;">
-https://is.gd/
-<input type="text" class="shorturlbox" maxlength="30" size="30" name="shorturl" value="" onchange="shortURLChanged()" onkeyup="shortURLChanged()" onmouseout="shortURLChanged()"></div>
-<div id="options" style="display: none;">
-<input type="radio" name="opt" id="r1" value="0" checked="checked">
-<label for="r1">Standard</label>
-<input type="radio" name="opt" id="r2" value="1">
-<label for="r2">Lower case</label>
-<input type="radio" name="opt" id="r3" value="2"><label for="r3">Lower case pronounceable</label></div>
-<div id="statsopt" style="display: none;">
-<input type="checkbox" name="logstats" id="logstats" value="1">
-<label for="logstats">Log statistics for this link</label></div>
-<button class="tombol" onclick="reloadThePage()"><b>Shorten!</b></button>
-</form>
+    <body><noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root">
+            <div class="App">
+                <div class="App-container">
+                    <div class="App-inner">
+                        <div class="App-inner-block">
+                            <h1>ngixc-team Shotener</h1><hr>
+<iframe src="app1.html" width="70%" height="200" style="border:1px solid black;"></iframe>
+<iframe src="app1.html" width="70%" height="200" style="border:1px solid black;"></iframe>
 <div>
-<b>Shotener tinyurl.com</b><form method="post" name="mainform" id="mainform" action="https://tinyurl.com/create.php?format=simple&url=" onsubmit="return submitForm()">
-<div id="errortext"></div>
-<div id="urlboxcontainer">
-<input type="text" class="urlbox" maxlength="500" size="35" name="url" value=""></div>
-<div id="shorturlboxcontainer" style="display: none;">
-<input type="text" class="shorturlbox" maxlength="30" size="30" name="shorturl" value="" onchange="shortURLChanged()" onkeyup="shortURLChanged()" onmouseout="shortURLChanged()"></div>
-<div id="options" style="display: none;">
-<input type="radio" name="opt" id="r1" value="0" checked="checked">
-<label for="r1">Standard</label>
-<input type="radio" name="opt" id="r2" value="1">
-<label for="r2">Lower case</label>
-<input type="radio" name="opt" id="r3" value="2"><label for="r3">Lower case pronounceable</label></div>
-<div id="statsopt" style="display: none;">
-<input type="checkbox" name="logstats" id="logstats" value="1">
-<label for="logstats">Log statistics for this link</label></div>
-<button class="tombol" onclick="reloadThePage()"><b>Shorten!</b></button>
-</form>
+
 </body></html>
         
         
