--- a/app1.html
+++ b/app1.html
@@ -1,4 +1,8 @@
-    <b>Shotener is.gd</b>
+   <div style="background-color: hsla(0, 0%, 100%, 0.63); border-radius: 5px; border: 1px solid Gainsboro; box-sizing: border-box; float: center; font-size: 11pt; font-weight: lighter; font: 12px Georgia, serif; height: 580px; width: 700px;">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> 
+<b>Shotener is.gd</b>
    <form method="post" name="mainform" id="mainform" action="https://is.gd/create.php?format=simple&amp;url=create.php" onsubmit="return submitForm()">
 <div id="errortext"></div>
 <div id="urlboxcontainer">
