--- a/app2.html
+++ b/app2.html
@@ -1,3 +1,30 @@
+<style>
+      .tombol{
+        /*ubah warna background*/
+        background-color: #7942ee;
+        /*ubah warna teks*/
+        color: white;
+        /*menghilangkan border*/
+        border: none;
+ /*atur sudut border*/
+        border-radius: 5px;
+        /*efek bayangan*/
+        box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.2);
+        /*teks rata tengah*/
+        text-align: center;
+        /*ubah jarak margin/luar*/
+        margin: 5px 2px;
+        /*ubah jarak padding/dalam*/
+        padding: 10px 15px;
+        /*ubah tampilan kursor ketika berada diatas elemen*/
+        cursor: pointer;
+      }
+      .tombol:hover{
+        /*ubah warna background ketika kursor berada diatas elemen*/
+        background-color: #6124e3;
+      }
+    </style>
+    </head><body>
 <b>Shotener tinyurl.com</b><form method="post" name="mainform" id="mainform" action="https://tinyurl.com/create.php?format=simple&url=" onsubmit="return submitForm()">
 <div id="errortext"></div>
 <div id="urlboxcontainer">
