--- a/app1.html
+++ b/app1.html
@@ -1,7 +1,30 @@
-   <div style="background-color: hsla(0, 0%, 100%, 0.63); border-radius: 5px; border: 1px solid Gainsboro; box-sizing: border-box; float: center; font-size: 11pt; font-weight: lighter; font: 12px Georgia, serif; height: 580px; width: 700px;">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> 
+<style>
+      .tombol{
+        /*ubah warna background*/
+        background-color: #7942ee;
+        /*ubah warna teks*/
+        color: white;
+        /*menghilangkan border*/
+        border: none;
+ /*atur sudut border*/
+        border-radius: 5px;
+        /*efek bayangan*/
+        box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.2);
+        /*teks rata tengah*/
+        text-align: center;
+        /*ubah jarak margin/luar*/
+        margin: 5px 2px;
+        /*ubah jarak padding/dalam*/
+        padding: 10px 15px;
+        /*ubah tampilan kursor ketika berada diatas elemen*/
+        cursor: pointer;
+      }
+      .tombol:hover{
+        /*ubah warna background ketika kursor berada diatas elemen*/
+        background-color: #6124e3;
+      }
+    </style>
+    </head><body>
 <b>Shotener is.gd</b>
    <form method="post" name="mainform" id="mainform" action="https://is.gd/create.php?format=simple&amp;url=create.php" onsubmit="return submitForm()">
 <div id="errortext"></div>
