--- a/app1.html
+++ b/app1.html
@@ -25,8 +25,8 @@
       }
     </style>
     </head><body>
-<b>Shotener is.gd</b>
-   <form method="post" name="mainform" id="mainform" action="https://is.gd/create.php?format=simple&amp;url=create.php" onsubmit="return submitForm()">
+<b>Shotener tinyurl.com</b>
+   <form method="post" name="mainform" id="mainform" action="https://tinyurl.com/create.php?format=simple&url=" onsubmit="return submitForm()">
 <div id="errortext"></div>
 <div id="urlboxcontainer">
 <input type="text" class="urlbox" maxlength="500" size="35" name="url" value=""></div>
