--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="https://z-p3-static.xx.fbcdn.net/rsrc.php/v3/yM/r/gO8CBeP2xPm.png" />
+        <link rel="shortcut icon" href="https://image.prntscr.com/image/W6yvCbgNQa686gxnCVzI_g.png" />
         <title>Ngixc | Shotener</title>
     </head>
     <script language="JavaScript">
