--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 document.addEventListener("contextmenu", function(e){
     e.preventDefault();
 }, false);
-  }
-}
+</script>
+ <script language="JavaScript">
 function redirectCU(e) {
   if (e.ctrlKey && e.which == 85) {
     window.location.replace("");
